--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 <script type="module" src="./js/main.js"></script>
+<script src="./node_modules/genetic-js/js/genetic-0.1.14.js"></script>
+<script src="./js/matter.js"></script>
+<script src="./js/require.js"></script>
 </body>
 </html>
